samples/_failures_safe/1761793575_1ed12e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4381e50b.c: In function ‘main’:
./samples/SAFE/__tmp_4381e50b.c:139:9: error: expected declaration or statement at end of input
  139 |         execute_operation(&g, operations[i], 0, 0);
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4381e50b.c:139:9: error: expected declaration or statement at end of input
